2004-11-25  Theodore A. Roth  <troth@openavr.org>

	* gas/config/tc-avr.c (mcu_types): Add support for atmega165,
	atmega325, atmega3250, atmega645 and atmega6450.

2004-11-25 Jan Beulich  <jbeulich@novell.com>

	* config/tc-i386.c (optimize_imm): Adjust immediates to only those
	permissible for the selected instruction suffix.
	(process_suffix): For DefaultSize instructions, suppressing the
	guessing of a 'q' suffix if the instruction doesn't support it is
	pointless, because only an 'l' suffix can be guessed in this place.

2004-11-24  Nick Clifton  <nickc@redhat.com>

	* config/tc-iq2000.c: Remove support for IQ10 processor.
	Convert to ISO C90 formatting.
	* config/tc-iq2000.h: Likewise.

2004-11-23  Nick Clifton  <nickc@redhat.com>

	* config/tc-mn10300.c (md_relax_table): More fixes to the offsets
	in this table.  They should be correct now.

2004-11-23 Jan Beulich <jbeulich@novell.com>

	* config/tc-i386.h (CpuMMX2): Declare. Artificial classifier to
	indicate the MMX extensions added by both SSE and 3DNow!A.
	(Cpu3dnowA): Declare.
	(CpuUnknownFlags): Update.
	* config/tc-i386.c (cpu_sub_arch_name): Declare.
	(cpu_arch): i586 and pentium do not imply MMX. i686 and pentiumpro do
	neither imply SSE nor MMX. k6 implies MMX. k6_2 additionally implies
	3DNow!. Athlon additionally implies 3DNow!A. Several new
	entries (those starting with a dot are for sub-arch specification).
	(set_cpu_arch): Handle sub-arch specifications.
	(parse_insn): Distinguish between instructions not supported because
	of insufficient CPU features and because of 64-bit mode.
	* doc/c-i386.texi: Describe enhanced .arch directive.

2004-11-22  Bob Wilson  <bob.wilson@acm.org>

	* config/tc-xtensa.c (xg_add_opcode_fix): Set fx_no_overflow.

2004-11-22  Bob Wilson  <bob.wilson@acm.org>

	* dwarf2dbg.c (dwarf2_finish): Don't write a .debug_line section
	without a corresponding .debug_info section.

2004-11-22  Hans-Peter Nilsson  <hp@axis.com>

	* read.c (potable): Add "error" and "warning".