@@ -7,4 +7,5 @@ if [istarget m32r*-*-*] {
     run_dump_test "fslot"
     run_dump_test "signed-relocs"
     run_dump_test "seth"
+    run_dump_test "rela-1"
 }
